# TuQanes

./: .gitignore  DIAGRAMA.md  README.md  main.py  pyproject.toml  requirements.txt  test.py
artifacts/: RESULTS_SUMMARY.md
artifacts/H2emu-results-customcirc/: common_pitfalls_audit.csv  compiled_resources_h2.csv  cv_summary.csv  final_test_metrics.csv  finite_sampling_diagnostics(1).csv  kernel_h2_shots1024.npy  kernel_h2_shots256.npy  rbf_gridsearch.csv  run_manifest.json  split_test.csv  split_train.csv
artifacts/classical/: full_dataset_cv_chem5_v01.csv  full_dataset_holdout_chem5_v01.csv  quantum80_svm_cv_locked.csv  quantum80_svm_oof_metrics.csv
artifacts/comparison/: master_metrics.csv
artifacts/nexus/: local_exact_comparison_16_64.csv  package_status.csv
artifacts/quantum/: ablation_by_family.csv  ablation_by_scaling.csv  ablation_by_topology.csv  kernel_diagnostics.csv  kernel_geometry_summary.csv  map_cv_best_by_map.csv  map_cv_summary_all_C.csv  noise_proxy_sensitivity_summary.csv  qsvm_recompute_check.csv  shot_sensitivity_summary.csv
notebooks/: RepoLuisV2.ipynb  chemq_water_quantathon_2026.ipynb  guppy_simple_circuit.ipynb  track2_quantathon2026_TuQanes.ipynb
notebooks/Definitivos/: QSVM_Water_H2_Nexus.ipynb  QSVM_Water_H2emu_Nexus.ipynb
notebooks/Johnny/: .gitignore
notebooks/Luis/: ircach_14_muestras_completas_5_features_labeled.csv  ircach_21_muestras_completas_4_features_labeled.csv  water_potability_complete_cases.csv  water_potability_master_v1.csv
notebooks/results/: metrics_main.csv
src/tuqanes/: __init__.py  classical.py  (+7 more)
(+9175 files in other folders)
